--- a/dispatcher/pom.xml
+++ b/dispatcher/pom.xml
@@ -28,12 +28,19 @@
       <artifactId>telegrambots-spring-boot-starter</artifactId>
       <version>${telegrambot.starter.version}</version>
     </dependency>
+
     <dependency>
       <groupId>ru.mwg</groupId>
       <artifactId>common-mq</artifactId>
       <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-amqp</artifactId>
+    </dependency>
+
   </dependencies>
 
 </project>
