dispatcher -> mq -> node -> mq -> dispatcher -> tg

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
   <modules>
     <module>dispatcher</module>
     <module>common-mq</module>
+    <module>node</module>
   </modules>
 
   <properties>
