--- a/common-mq/pom.xml
+++ b/common-mq/pom.xml
@@ -9,11 +9,8 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>common-mq</artifactId>
-
-  <properties>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
-  </properties>
+  <artifactId>ru.mwg</artifactId>
+  <groupId>ru.mwg.common-mq</groupId>
+  <version>1.0-SNAPSHOT</version>
 
 </project>
