--- a/node/pom.xml
+++ b/node/pom.xml
@@ -9,14 +9,17 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>ru.mwg</artifactId>
-  <groupId>ru.mwg.dispatcher</groupId>
-  <version>1.0-SNAPSHOT</version>
+  <artifactId>node</artifactId>
 
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-amqp</artifactId>
     </dependency>
 
     <dependency>
@@ -27,16 +30,15 @@
 
     <dependency>
       <groupId>ru.mwg</groupId>
-      <artifactId>common-mq</artifactId>
+      <artifactId>common-rabbitmq</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>ru.mwg.common-mq</groupId>
+      <artifactId>ru.mwg</artifactId>
       <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-amqp</artifactId>
-    </dependency>
-
   </dependencies>
 
 </project>
