--- a/node/pom.xml
+++ b/node/pom.xml
@@ -9,8 +9,8 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>node</artifactId>
-
+  <artifactId>ru.mwg.node</artifactId>
+  <version>1.0-SNAPSHOT</version>
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -30,12 +30,7 @@
 
     <dependency>
       <groupId>ru.mwg</groupId>
-      <artifactId>common-rabbitmq</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>ru.mwg.common-mq</groupId>
-      <artifactId>ru.mwg</artifactId>
+      <artifactId>ru.mwg.common-mq</artifactId>
       <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
