--- a/node/pom.xml
+++ b/node/pom.xml
@@ -52,6 +52,12 @@
       <artifactId>hibernate-types-52</artifactId>
       <version>2.2.2</version>
     </dependency>
+    <dependency>
+      <groupId>ru.mwg</groupId>
+      <artifactId>ru.mwg.common-jpa</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
 </project>
