--- a/node/src/main/resources/application.yml
+++ b/node/src/main/resources/application.yml
@@ -15,3 +15,11 @@ spring:
     generate-ddl: true
     hibernate:
       ddl-auto: create
+config:
+  bot:
+    name:
+    token:
+    file_storage:
+      uri: https://api.telegram.org/bot{token}/getFile?file_id={fileId}
+    file_info:
+      uri: https://api.telegram.org/file/bot{token}/{filePath}
