--- a/node/pom.xml
+++ b/node/pom.xml
@@ -35,7 +35,6 @@
       <scope>compile</scope>
     </dependency>
 
-
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -52,12 +51,13 @@
       <artifactId>hibernate-types-52</artifactId>
       <version>2.2.2</version>
     </dependency>
+
     <dependency>
-      <groupId>ru.mwg</groupId>
-      <artifactId>ru.mwg.common-jpa</artifactId>
-      <version>1.0-SNAPSHOT</version>
-      <scope>compile</scope>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>5.2.3</version>
     </dependency>
+
   </dependencies>
 
 </project>
