--- a/node/pom.xml
+++ b/node/pom.xml
@@ -58,6 +58,12 @@
       <version>5.2.3</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
 </project>
